--- a/src/App.css
+++ b/src/App.css
@@ -30,5 +30,10 @@
   border: 1px solid var(--orange);
   color: var(--orange);
   background: white;
+}
 
+@media screen and (max-width: 480px){
+  .App{
+    padding: 0.5rem 1rem;
+  }
 }
