--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -109,3 +109,24 @@
     left: 56%;
     filter: blur(72px);
 }
+
+@media screen and (max-Width: 480px){
+    .intro{
+        flex-direction: column;
+        height: 64rem;
+        gap: 7rem;
+
+    }
+    .right-i{
+        transform: scale(0.8);
+        left: -3rem;
+    }
+    .right-i .blur{
+        display: none;
+    }
+    .floating-div:nth-of-type(1){
+        top: -7rem !important;
+    }
+
+}
+
