--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -31,7 +31,7 @@
     display: flex;
     gap: 2rem;
     margin-right: 4rem;
-     list-style-type: none;
+    cursor: pointer;
 }
 .n-list>ul>li:hover{
     cursor: pointer;
@@ -43,4 +43,11 @@
 
 }
 
-
+@media screen and (max-Width: 480px){
+  .n-list{
+    display: none;
+  }  
+  .n-button{
+    display: none;
+  }
+}
